# 1brc-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  calculate_average.cpp  calculate_average_baseline.cpp  sample_test.sh  validate.sh
src/: calculate_average.cpp  calculate_average_baseline.cpp  create_measurements.cpp
